--- a/dup-filter/package.json
+++ b/dup-filter/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "double-metaphone": "^1.0.5",
+    "levenshtein-edit-distance": "^2.0.5",
     "node-sass": "^4.14.1",
     "papaparse": "^5.2.0",
     "react": "^16.13.1",
